fixed spacing in navbar

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,7 +11,7 @@
 .nav-content {
   display: flex;
   align-items: center;
-  gap: 10rem; /* spacing between links and button */
+  gap: 59rem; /* spacing between links and button */
 }
 
 .nav-links {
@@ -21,7 +21,7 @@
 
 .nav-buttons {
   display: flex;
-  gap: 1.5rem; /* spacing between links */
+  gap: 1rem; /* spacing between links */
 }
 
 .nav-links a {
